--- a/Client/app/index.html
+++ b/Client/app/index.html
@@ -36,11 +36,10 @@
                         <div class="large-6 columns">
                             <nav>
                                 <ul>
-                                    <li><a href="/">Home</a></li>
-                                    <li><a href="/blog">Blog</a></li>
-                                    <li><a href="/portfolio">Portfolio</a></li>
-                                    <li><a href="/resume">Resume</a></li>
-                                    <li><a href="/blog/form">form</a></li>
+                                    <li><a ui-sref="home">Home</a></li>
+                                    <li><a ui-sref="blog">Blog</a></li>
+                                    <li><a ui-sref="portfolio">Portfolio</a></li>
+                                    <li><a ui-sref="resume">Resume</a></li>
                                 </ul>
                             </nav>
                         </div>
@@ -51,7 +50,7 @@
 
         <main>
             <div class="row">
-                <div class="large-12 columns" ng-view=""></div>
+                <div class="large-12 columns" ui-view></div>
             </div>
         </main>
 
@@ -73,7 +72,8 @@
             s.parentNode.insertBefore(g,s)}(document,'script'));*/
         </script>
 
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+        <!-- <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script> -->
+        <script src="bower_components/jquery/jquery.min.js"></script>
         <script src="bower_components/angular/angular.js"></script>
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
@@ -92,9 +92,11 @@
         <script src="bower_components/angular-resource/angular-resource.js"></script>
         <script src="bower_components/angular-cookies/angular-cookies.js"></script>
         <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
+        <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
         <script src="scripts/services/commsService.js"></script>
         <script src="scripts/directives/editor.js"></script>
         <script src="scripts/controllers/post.js"></script>
+        <script src="scripts/controllers/Admin.js"></script>
         <!-- endbuild -->
     </body>
 </html>
