--- a/Client/app/index.html
+++ b/Client/app/index.html
@@ -72,7 +72,6 @@
             s.parentNode.insertBefore(g,s)}(document,'script'));*/
         </script>
 
-        <!-- <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script> -->
         <script src="bower_components/jquery/jquery.min.js"></script>
         <script src="bower_components/angular/angular.js"></script>
 
@@ -93,10 +92,12 @@
         <script src="bower_components/angular-cookies/angular-cookies.js"></script>
         <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
         <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+        <script src="bower_components/momentjs/moment.js"></script>
         <script src="scripts/services/commsService.js"></script>
         <script src="scripts/directives/editor.js"></script>
         <script src="scripts/controllers/post.js"></script>
         <script src="scripts/controllers/Admin.js"></script>
+        <script src="scripts/filters/cdate.js"></script>
         <!-- endbuild -->
     </body>
 </html>
