made blog the default route + updates

--- a/Client/app/index.html
+++ b/Client/app/index.html
@@ -36,10 +36,10 @@
                         <div class="small-6 large-6 columns">
                             <nav>
                                 <ul>
-                                    <li><a ui-sref="home">Home</a></li>
-                                    <li><a ui-sref="blog">Blog</a></li>
-                                    <li><a ui-sref="portfolio">Portfolio</a></li>
-                                    <li><a ui-sref="resume">Resume</a></li>
+                                    <!--<li><a ui-sref="home">Home</a></li>-->
+                                    <!--<li><a ui-sref="blog">Blog</a></li>-->
+                                    <!--<li><a ui-sref="portfolio">Portfolio</a></li>-->
+                                    <!--<li><a ui-sref="resume">Resume</a></li>-->
                                 </ul>
                             </nav>
                         </div>
